# Shibuya-Bawt

./: README.md  main.py  pyproject.toml  requirements.txt  smile.txt
data/lists/: marioQuotes.txt
tools/: count.py  list.py
