[tool.poetry]
name = "shibuya-bot"
version = "0.9.0"
description = "Bot created for the Shibuya UG Discord Server"
authors = ["PandaBroPrime <@PandaBroPrime#2263>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
